将角色列表筛选和排序改为下拉框的形式。